- Adjusted verified checkmark aligning (top text) - Changed import button (in /import) element to button, that causes buggy click pointer not working - Made the image on WatchVideo component redirects to channel - Centered the video card relative to their parent (Useful when theres not enough space for another column in a grid but still made an extra unnecessary space, what happen is the card would justify to the left)

--- a/src/piped.css
+++ b/src/piped.css
@@ -25,7 +25,7 @@
 
 /*Avatar*/ .comment-avatar, .pp-import-channel img {width: 40rem; height:  40rem}
 
-/*Video Grid */ .video-grid {display: grid; gap: 15rem; grid-template-columns: repeat(auto-fit, minmax(300rem, 1fr));}
+/*Video Grid */ .video-grid {display: grid; gap: 15rem; grid-template-columns: repeat(auto-fit, minmax(300rem, 1fr)); justify-items:center;}
 
 tbody:nth-child(odd) {background: var(--efy_bg1)!important; box-shadow: inset 0 0 0 1.5px var(--efy_bg1)}
 
